manifests/network-policies/allow-ingress-to-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-app
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: microservices-chart
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ingress-nginx.kubernetes.io/instance: ingress-nginx
    ports:
    - protocol: TCP
      port: 8080
